<resources>
    <string name="app_name">memento</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phoneText">Phone</string>
    <string name="socmedText">Social Media</string>
    <string name="socmed_template">https//:instagram.com/helloitsme/</string>
    <string name="phone_template">(451) 555 - 2671</string>
    <string name="birthdayText">Birthday</string>
    <string name="birthday_template">DD-MM-YYYY</string>
    <string name="addressText">Address</string>
    <string name="address_template">
       50 Oakland Ave, San Diego 853421
    </string>

    <string name="nameText">Name</string>
    <string name="nicknameText">Nickname</string>
    <string name="name_template">John Doe</string>
    <string name="nickname_template">John D</string>
    <string name="birthdayFormText">Birthday (DD/MM/YYYY)</string>
    <string name="phoneFormText">Phone Number (e.g. (451) 555 - 2671)</string>
    <string name="socmedFormText">Social Media Profile URL</string>
    <string name="save">SAVE</string>
    <string name="deny">CLOSE</string>
    <string name="allow">ASK PERMISSION</string>
    <string name="getImg">Select image from phone storage</string>
    <string name="descHeader">Why we need your permission?</string>
    <string name="descriptionPermission">We need your permission so that we can access your file and media storage. This permission will allow us to <b> read/access your file and media data and also write/modify it </b>. We will use this permission to get image/photo from your media and save/use it for your profile display pictures.
         \n \nFile and media data will be saved at our Room Persistence Library (local database for memento) and <b> wont be used against your privacy.</b>
    </string>

    <string name="creditButton">Credit</string>
    <string name="madeBy">developed with joy and tears (mostly tears) by jeremy</string>
    <string name="mementoTitle">memento</string>


</resources>