<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   >
    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ProfilesDetail"
        android:background="@color/anotherNiceGrey">

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/name_template"
            android:scaleType="centerCrop"
            android:src="@drawable/template" />


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/name_template"
            android:textColor="@color/niceOrange"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/nickname_template"
            android:textColor="@color/niceOrange"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/phoneText"
                android:textColor="@color/niceOrange"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/phone_template"
                android:textColor="@color/niceOrange"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/birthdayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/birthdayText"
                android:textColor="@color/niceOrange"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/birthday_template"
                android:textColor="@color/niceOrange"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/socmedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/socmedText"
                android:textColor="@color/niceOrange"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/socmed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:autoLink="web"
                android:text="@string/socmed_template"
                android:textColor="@color/niceOrange"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/addressText"
                android:textColor="@color/niceOrange"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/address_template"
                android:textColor="@color/niceOrange"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</layout>