<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddProfileActivity"
        android:orientation="vertical">

        <Button
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/name_template"
            android:background="@drawable/template"
            android:textSize="15sp"
            android:text="Select Image from galery or camera"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/nameText"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/nicknameText"
                android:textColor="@android:color/black"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/phoneText"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="number"/>



            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/birthdayText"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="date"/>


            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:gravity="start"
                android:layout_marginTop="10dp"
                android:text="@string/addressText"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                />

        <Button
            android:id="@+id/button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:layout_gravity="end"
            android:background="@android:color/holo_blue_light"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/save" />
    </LinearLayout>


</layout>